--- a/app/assets/stylesheets/more-responsive-less-ui/elements/form.less
+++ b/app/assets/stylesheets/more-responsive-less-ui/elements/form.less
@@ -4,6 +4,9 @@ form{
     margin-top: 10px;
     padding-left: 10px;
 
+  }
+
+  .input {
     &:not(.boolean){
       label { display: none}
     }
