--- a/app/assets/stylesheets/more-responsive-less-ui/typography.less
+++ b/app/assets/stylesheets/more-responsive-less-ui/typography.less
@@ -1,24 +1,37 @@
 @screen-height: 380px;
 
+@height-navbar: 96px;
+@font-navbar: 'Quicksand';
+
 body {
   margin: 0px;
   @media(min-width: @media-bp){
     padding: 0px 10%;
   }
   @media(max-width: @media-bp){
-    padding: 0px 0px;
+    padding: 0px 3%;
   }
 
   font-family: 'Quicksand';
+
   h1, h2, h3, h4, h5, h6{
     font-style: oblique;
   }
+
   a {
     text-decoration: none;//
   }
 
   nav{
     li { list-style: none; }
+  }
+
+  header{
+    font-family: @font-navbar;
+    .logo {
+      font-size: 0.8 * @height-navbar;
+      color: @color-header-text;
+    }
   }
 
   article{
